fix: remove overflow: hidden on Graphers for dods to exceed bounds when the only room is above

--- a/packages/@ourworldindata/grapher/src/core/grapher.scss
+++ b/packages/@ourworldindata/grapher/src/core/grapher.scss
@@ -84,9 +84,6 @@ $zindex-Tooltip: 20;
 
     position: relative;
 
-    /* Hidden overflow x so that tooltips don't cause scrollbars */
-    overflow: hidden;
-
     border-radius: 2px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 2px 0px,
         rgba(0, 0, 0, 0.25) 0px 2px 2px 0px;
